--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "formik": "^2.2.6",
+    "node": "^16.0.0",
     "postcss": "^8.2.12",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.2",
@@ -19,8 +22,11 @@
     "react-hook-form": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.32.11",
+    "styled-components": "^5.2.3",
     "tailwindcss": "^2.1.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
