--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
     "node": "^16.0.0",
     "postcss": "^8.2.12",
     "postcss-cli": "^8.3.1",
+    "prettier": "^2.2.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.2.3",
     "react-router-dom": "^5.2.0",
