--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-cli": "^8.3.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.2.3",
     "react-router-dom": "^5.2.0",
